# simple-todo-note

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
